force-app/main/default/objects/Junction_Linkage__c/Junction_Linkage__c.object-meta.xml
<CustomObject>
    <description>If there is a linkage opportunity, this object will hold relationship between organisation and the Research Opportunity (Funding Scheme / Opportunity / Collaboration / Sub-Contract/Share)</description>
    <label>Funding Details</label>
    <nameField>
        <label>Funding Details Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>