force-app/main/default/objects/Junction_Linkage__c/fields/Funding_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Funding_Opportunity__c</fullName>
    <formula>I_RS_Research_Opportunity__r.Name</formula>
    <label>Funding Opportunity</label>
    <type>Text</type>
</CustomField>