force-app/main/default/objects/Junction_Linkage__c/fields/I_RS_Amount_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Amount_Confirmed__c</fullName>
    <description>Amount awarded to the project</description>
    <label>Amount Confirmed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>