force-app/main/default/objects/Junction_Linkage__c/fields/I_RS_Amount_Suggested__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Amount_Suggested__c</fullName>
    <description>Amount requested with the funding organisation</description>
    <label>Amount Suggested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>