force-app/main/default/objects/Junction_Linkage__c/fields/I_RS_Awarded_to__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Awarded_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Organisation that has been awarded the funds</inlineHelpText>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Funding Details</relationshipLabel>
    <relationshipName>Junction_Linkage</relationshipName>
    <type>Lookup</type>
</CustomField>