force-app/main/default/objects/Junction_Linkage__c/fields/I_RS_Contact_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Contact_Billing_Address__c</fullName>
    <formula>if(LEN(I_RS_Contact_Person__r.MailingStreet)&gt;0, I_RS_Contact_Person__r.MailingStreet&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(I_RS_Contact_Person__r.MailingCity)&gt;0, I_RS_Contact_Person__r.MailingCity&amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(I_RS_Contact_Person__r.MailingState)&gt;0, I_RS_Contact_Person__r.MailingState&amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(I_RS_Contact_Person__r.MailingPostalCode)&gt;0, I_RS_Contact_Person__r.MailingPostalCode,&quot;&quot;) &amp; BR() &amp;
If(LEN( I_RS_Contact_Person__r.MailingCountry) &gt;0, I_RS_Contact_Person__r.MailingCountry,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Billing Address</label>
    <type>Text</type>
</CustomField>