force-app/main/default/objects/Junction_Linkage__c/fields/I_RS_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Contact_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Funding Details</relationshipLabel>
    <relationshipName>Funding_Details</relationshipName>
    <type>Lookup</type>
</CustomField>