force-app/main/default/objects/Junction_Linkage__c/fields/I_RS_Discipline__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Discipline__c</fullName>
    <label>Discipline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>