force-app/main/default/objects/Junction_Linkage__c/fields/I_RS_Lead_Organisation__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Lead_Organisation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identified the lead funding organisation.</description>
    <label>Lead Organisation</label>
    <type>Checkbox</type>
</CustomField>