force-app/main/default/objects/Junction_Linkage__c/fields/I_RS_Pipeline_Flag__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Pipeline_Flag__c</fullName>
    <formula>IF(
I_RS_Total_of_Confirmed_Amount_Manual__c  = I_RS_Total_of_Confirmed_Amount__c,

IMAGE(
LEFT($Api.Partner_Server_URL_260,
FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)
)+
&quot;resource/GreenCheck&quot;, &quot;Same&quot;, 15,15
),

IMAGE(
LEFT($Api.Partner_Server_URL_260,
FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)
)+
&quot;resource/AmberNotice&quot;, &quot;Different&quot;, 15,15
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays Green if total of Confirmed Amount and Pipeline Amount are same, else will display Amber.
Data Owner</inlineHelpText>
    <label>Pipeline Flag</label>
    <type>Text</type>
</CustomField>