force-app/main/default/objects/Junction_Linkage__c/fields/I_RS_Project_record_type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Project_record_type__c</fullName>
    <formula>I_RS_Project_Proposal__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project record type</label>
    <type>Text</type>
</CustomField>