force-app/main/default/objects/Junction_Linkage__c/fields/I_RS_Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Relationship_Type__c</fullName>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Funding Body</fullName>
            </value>
            <value>
                <fullName>Other Organisation</fullName>
            </value>
            <value>
                <fullName>La Trobe Internal Cash</fullName>
            </value>
            <value>
                <fullName>La Trobe External Cash</fullName>
            </value>
            <value>
                <fullName>La Trobe In-kind</fullName>
            </value>
            <value>
                <fullName>Administering Organisation</fullName>
                <isActive>false</isActive>
                <label>Administering Organisation</label>
            </value>
            <value>
                <fullName>Collaborator</fullName>
                <isActive>false</isActive>
                <label>Collaborator</label>
            </value>
            <value>
                <fullName>Internal</fullName>
                <isActive>false</isActive>
                <label>Internal</label>
            </value>
            <value>
                <fullName>La Trobe Contribution</fullName>
                <isActive>false</isActive>
                <label>La Trobe Contribution</label>
            </value>
            <value>
                <fullName>Sub-Contractor</fullName>
                <isActive>false</isActive>
                <label>Sub-Contractor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>