force-app/main/default/objects/Junction_Linkage__c/fields/I_RS_Research_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Research Opportunity</label>
    <referenceTo>Research_Opportunity__c</referenceTo>
    <relationshipLabel>Related Project Proposals</relationshipLabel>
    <relationshipName>Junction_Linkage</relationshipName>
    <type>Lookup</type>
</CustomField>