force-app/main/default/objects/Junction_Linkage__c/fields/I_RS_Share_Percentage__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Share_Percentage__c</fullName>
    <description>% of total project fund awarded by an organisation</description>
    <label>Share Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>