force-app/main/default/objects/Junction_Linkage__c/fields/I_RS_Subcontract_Collaboration_type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Subcontract_Collaboration_type__c</fullName>
    <label>Subcontract/Collaboration type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>I_RS_Relationship_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affiliation</fullName>
            </value>
            <value>
                <fullName>Conducting Research</fullName>
            </value>
            <value>
                <fullName>Providing a Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>