force-app/main/default/objects/Junction_Linkage__c/fields/I_RS_Total_of_Confirmed_Amount__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Total_of_Confirmed_Amount__c</fullName>
    <formula>I_RS_Year_1_Confirmed_Amount__c +
I_RS_Year_2_Confirmed_Amount__c +
I_RS_Year_3_Confirmed_Amount__c +
I_RS_Year_4_Confirmed_Amount__c +
I_RS_Year_5_Confirmed_Amount__c +
I_RS_Year_6_Confirmed_Amount__c +
I_RS_Year_7_Confirmed_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total of Pipeline Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>