force-app/main/default/objects/Junction_Linkage__c/fields/I_RS_Total_of_Confirmed_Amount_Manual__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Total_of_Confirmed_Amount_Manual__c</fullName>
    <label>Total of Confirmed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>