force-app/main/default/objects/Junction_Linkage__c/fields/I_RS_Total_of_Suggested_Amount__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Total_of_Suggested_Amount__c</fullName>
    <formula>I_RS_Year_1_Suggested_Amount__c +
I_RS_Year_2_Suggested_Amount__c +
I_RS_Year_3_Suggested_Amount__c + 
I_RS_Year_4_Suggested_Amount__c +
I_RS_Year_5_Suggested_Amount__c +
I_RS_Year_6_Suggested_Amount__c +
I_RS_Year_7_Suggested_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total of Suggested Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>