force-app/main/default/objects/Junction_Linkage__c/fields/I_RS_Ultimate_Source_of_Funds__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Ultimate_Source_of_Funds__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ultimate Source of Funds</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Funding Details (Ultimate Source of Funds)</relationshipLabel>
    <relationshipName>Funding_Details</relationshipName>
    <type>Lookup</type>
</CustomField>