force-app/main/default/objects/Junction_Linkage__c/fields/I_RS_Year_3_Suggested_Amount__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Year_3_Suggested_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Year 3 Suggested Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>