force-app/main/default/objects/Junction_Linkage__c/fields/I_RS_Year__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Year__c</fullName>
    <description>Financial Year for which the fund is awarded. This will be in the format &apos;YYYY&apos;</description>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>