force-app/main/default/objects/Junction_Linkage__c/fields/Lead_Chief_Investigator__c.field-meta.xml
<CustomField>
    <fullName>Lead_Chief_Investigator__c</fullName>
    <formula>I_RS_Project_Proposal__r.I_RS_LeadChiefInvestigator__r.FirstName &amp; &quot; &quot; &amp; I_RS_Project_Proposal__r.I_RS_LeadChiefInvestigator__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Chief Investigator</label>
    <type>Text</type>
</CustomField>