force-app/main/default/objects/Junction_Linkage__c/fields/Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner__c</fullName>
    <formula>I_RS_Project_Proposal__r.Owner:User.FirstName + &quot; &quot;+ I_RS_Project_Proposal__r.Owner:User.LastName</formula>
    <label>Project Owner</label>
    <type>Text</type>
</CustomField>