force-app/main/default/objects/Junction_Linkage__c/fields/Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Status__c</fullName>
    <formula>TEXT(I_RS_Project_Proposal__r.I_RS_Status__c)</formula>
    <label>Project Status</label>
    <type>Text</type>
</CustomField>