force-app/main/default/objects/Junction_Linkage__c/fields/Project_Title__c.field-meta.xml
<CustomField>
    <fullName>Project_Title__c</fullName>
    <formula>I_RS_Project_Proposal__r.Name</formula>
    <label>Project Title</label>
    <type>Text</type>
</CustomField>