force-app/main/default/objects/Junction_Linkage__c/validationRules/No_more_than_100_or_less_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>No_more_than_100_or_less_than_0</fullName>
    <active>true</active>
    <description>A percent field is not allowed to have a value more than 100% or less than 0%</description>
    <errorConditionFormula>I_RS_Share_Percentage__c &gt; 1.00 || I_RS_Share_Percentage__c &lt; 0.0</errorConditionFormula>
    <errorDisplayField>I_RS_Share_Percentage__c</errorDisplayField>
    <errorMessage>Please enter a value between 0% and 100%</errorMessage>
</ValidationRule>