force-app/main/default/objects/Junction_Linkage__c/validationRules/Year_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Year_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(I_RS_Year__c)),
!REGEX(I_RS_Year__c,&quot;^\\d{4}?$&quot;)
)</errorConditionFormula>
    <errorDisplayField>I_RS_Year__c</errorDisplayField>
    <errorMessage>Please enter a valid Year</errorMessage>
</ValidationRule>